<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_multithread_test_1</name>
  <version>3.0.1</version>
  <description>
    SMACC2 multi-threaded executor demonstration state machine.
    This state machine demonstrates the use of ExecutionModel::MULTI_THREAD_SPINNER
    for concurrent ROS2 callback processing. Addresses GitHub issue #571.
  </description>
  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cl_ros2_timer</depend>
  <depend>smacc2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
