<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cl_nav2z</name>
  <version>3.0.1</version>
  <description>The cl_nav2z package</description>

  <maintainer email="brett@robosoft.ai">Brett Aldrich</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>smacc2</depend>
  <depend>slam_toolbox</depend>

  <depend>angles</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>nav2_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_action</depend>
  
  <depend>nav2_util</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav_2d_utils</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>bond</depend>

  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
