<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_three_some</name>
  <version>2.3.20</version>
  <description>The sm_three_some package</description>
  <maintainer email="techsupport@robosoft.ai">Brett Aldrich</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cl_keyboard</depend>
  <depend>multirole_sensor_client</depend>
  <depend>cl_ros2_timer</depend>
  <depend>smacc2</depend>
  <depend>sr_all_events_go</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>

  <exec_depend>xterm</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
